--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "@react-native-community/blur": "^4.4.0",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-navigation/native": "^6.1.17",
-    "@react-navigation/native-stack": "^6.9.26",
-    "@react-navigation/stack": "^6.3.21",
+    "@react-navigation/native-stack": "^6.10.0",
+    "@react-navigation/stack": "^6.4.0",
+    "deprecated-react-native-prop-types": "^5.0.0",
     "dotenv": "^16.4.5",
     "expo": "^51.0.14",
     "expo-camera": "~14.1.3",
     "expo-image-picker": "~14.7.1",
     "expo-location": "~16.5.5",
+    "expo-mail-composer": "~13.0.1",
     "expo-status-bar": "~1.11.1",
     "formik": "^2.4.5",
     "react": "18.2.0",
@@ -29,6 +31,8 @@
     "react-native-image-picker": "^7.1.0",
     "react-native-maps": "1.10.0",
     "react-native-responsive-screen": "^1.4.2",
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-screens": "^3.31.1",
     "react-native-snap-carousel": "^3.9.1",
     "react-navigation": "^5.0.0",
     "source-map-generator": "^0.8.0",
