--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "urbaidemobileclient",
+  "name": "neuvillesursaoneaccueilapp",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -18,24 +18,17 @@
     "deprecated-react-native-prop-types": "^5.0.0",
     "dotenv": "^16.4.5",
     "expo": "^51.0.14",
-    "expo-camera": "~14.1.3",
-    "expo-image-picker": "~14.7.1",
-    "expo-location": "~16.5.5",
-    "expo-mail-composer": "~13.0.1",
     "expo-status-bar": "~1.11.1",
     "formik": "^2.4.5",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.14.0",
-    "react-native-image-picker": "^7.1.0",
-    "react-native-maps": "1.10.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
     "react-native-snap-carousel": "^3.9.1",
     "react-navigation": "^5.0.0",
-    "source-map-generator": "^0.8.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
