--- a/app.json
+++ b/app.json
@@ -3,10 +3,10 @@
     "name": "NeuvilleSurSaoneAccueilApp",
     "slug": "neuvillesusaone-accueilapp",
     "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "orientation": "landscape",
+    "icon": "./Src/Assets/icon.png",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./Src/Assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
