--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.4.5",
     "expo": "^51.0.14",
     "expo-status-bar": "~1.11.1",
+    "firebase": "^10.12.4",
     "formik": "^2.4.5",
     "react": "18.2.0",
     "react-native": "0.73.6",
