--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.12.4",
     "formik": "^2.4.5",
+    "patch-package": "^8.0.0",
     "react": "18.2.0",
-    "react-native": "0.73.6",
+    "react-native": "^0.74.5",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-responsive-screen": "^1.4.2",
